# UAS-Cyber

./: README.md  UAS Cyber Presentation.pptx
src/: .gitignore  README.md
src/.vim/: coc-settings.json
src/Visualizer/: packet-loss.py  pcapreader.py  vis.py
src/contrib/: wscript
src/parameter_optimizer/: .gitignore  Cargo.toml  gen_graphs.py
src/parameter_optimizer/src/: git.rs  main.rs  optimization.rs  position_parser.rs  util.rs
src/scratch/: .gitignore  test.cc
src/scratch/non-ideal/: main.cc  main.h  uav.cc  uav.h
