[package]
name = "parameter_optimizer"
version = "0.1.0"
authors = ["Troy Neubauer <troyneubauer@gmail.com>"]
edition = "2018"

[dependencies]
tpe = "0.1.1"
GSL = "4.0"
glam = "0.17.1"
scan_fmt = "0.2.6"
assert_approx_eq = "1.1.0"
rand = "0.8.4"
num_cpus = "1.13"
once_cell = "1.8.0"
ctrlc = "3.1.9"
atomic_float = "0.1.0"
plotters = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0.13", features = ["derive"] }
walkdir = "2"
indexmap = { version = "1.8", features = ["serde"] }
